--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,752 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{selin2004cd8,
+  title={CD8 memory T cells: cross-reactivity and heterologous immunity},
+  author={Selin, Liisa K and Cornberg, Markus and Brehm, Michael A and Kim, Sung-Kwon and Calcagno, Claudia and Ghersi, Dario and Puzone, Roberto and Celada, Franco and Welsh, Raymond M},
+  booktitle={Seminars in immunology},
+  volume={16},
+  number={5},
+  pages={335--347},
+  year={2004},
+  organization={Academic Press}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{cornberg2006narrowed,
+  title={Narrowed TCR repertoire and viral escape as a consequence of heterologous immunity},
+  author={Cornberg, Markus and Chen, Alex T and Wilkinson, Lee A and Brehm, Michael A and Kim, Sung-Kwon and Calcagno, Claudia and Ghersi, Dario and Puzone, Roberto and Celada, Franco and Welsh, Raymond M and others},
+  journal={The Journal of clinical investigation},
+  volume={116},
+  number={5},
+  pages={1443--1456},
+  year={2006},
+  publisher={American Society for Clinical Investigation}
+}
+
+@article{bahl2006ifn,
+  title={IFN-induced attrition of CD8 T cells in the presence or absence of cognate antigen during the early stages of viral infections},
+  author={Bahl, Kapil and Kim, Sung-Kwon and Calcagno, Claudia and Ghersi, Dario and Puzone, Roberto and Celada, Franco and Selin, Liisa K and Welsh, Raymond M},
+  journal={The Journal of Immunology},
+  volume={176},
+  number={7},
+  pages={4284--4295},
+  year={2006},
+  publisher={Am Assoc Immnol}
+}
+
+@article{cheng2009discrete,
+  title={A discrete computer model of the immune system reveals competitive interactions between the humoral and cellular branch and between cross-reacting memory and na{\"\i}ve responses},
+  author={Cheng, Yiming and Ghersi, Dario and Calcagno, Claudia and Selin, Liisa K and Puzone, Roberto and Celada, Franco},
+  journal={Vaccine},
+  volume={27},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={833--845},
+  year={2009},
+  publisher={Elsevier}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
+@article{calcagno2011computer,
+  title={Computer simulations of heterologous immunity: highlights of an interdisciplinary cooperation},
+  author={Calcagno, Claudia and Puzone, Roberto and Pearson, Yanthe E and Cheng, Yiming and Ghersi, Dario and Selin, Liisa K and Welsh, Raymond M and Celada, Franco},
+  journal={Autoimmunity},
+  volume={44},
+  number={4},
+  pages={304--314},
+  year={2011},
+  publisher={Taylor \& Francis}
+}
+
+@article{hernandez2009sitehound,
+  title={SITEHOUND-web: a server for ligand binding site identification in protein structures},
+  author={Hernandez, Marylens and Ghersi, Dario and Sanchez, Roberto},
+  journal={Nucleic acids research},
+  volume={37},
+  number={suppl\_2},
+  pages={W413--W416},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{ghersi2009improving,
+  title={Improving accuracy and efficiency of blind protein-ligand docking by focusing on predicted binding sites},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={74},
+  number={2},
+  pages={417--424},
+  year={2009},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@article{ghersi2009easymifs,
+  title={EasyMIFS and SiteHound: a toolkit for the identification of ligand-binding sites in protein structures},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  journal={Bioinformatics},
+  volume={25},
+  number={23},
+  pages={3185--3186},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{zhang2010biochemical,
+  title={Biochemical profiling of histone binding selectivity of the yeast bromodomain family},
+  author={Zhang, Qiang and Chakravarty, Suvobrata and Ghersi, Dario and Zeng, Lei and Plotnikov, Alexander N and Sanchez, Roberto and Zhou, Ming-Ming},
+  journal={PloS one},
+  volume={5},
+  number={1},
+  pages={e8903},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
+@article{ghersi2011beyond,
+  title={Beyond structural genomics: computational approaches for the identification of ligand binding sites in protein structures},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  journal={Journal of structural and functional genomics},
+  volume={12},
+  pages={109--117},
+  year={2011},
+  publisher={Springer Netherlands}
+}
+
+@article{ghersi2012automated,
+  title={Automated identification of binding sites for phosphorylated ligands in protein structures},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={80},
+  number={10},
+  pages={2347--2358},
+  year={2012},
+  publisher={Wiley Subscription Services, Inc., A Wiley Company Hoboken}
+}
+
+@article{chakravarty2011systematic,
+  title={Systematic assessment of accuracy of comparative model of proteins belonging to different structural fold classes},
+  author={Chakravarty, Suvobrata and Ghersi, Dario and Sanchez, Roberto},
+  journal={Journal of molecular modeling},
+  volume={17},
+  pages={2831--2837},
+  year={2011},
+  publisher={Springer-Verlag}
+}
+
+@article{ghersi2013disentangling,
+  title={Disentangling function from topology to infer the network properties of disease genes},
+  author={Ghersi, Dario and Singh, Mona},
+  journal={BMC Systems Biology},
+  volume={7},
+  number={1},
+  pages={1--12},
+  year={2013},
+  publisher={BioMed Central}
+}
+
+@article{ghersi2014interaction,
+  title={Interaction-based discovery of functionally important genes in cancers},
+  author={Ghersi, Dario and Singh, Mona},
+  journal={Nucleic Acids Research},
+  volume={42},
+  number={3},
+  pages={e18--e18},
+  year={2014},
+  publisher={Oxford University Press},
+  pdf={ghersi2014.pdf},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{ghersi2014molblocks,
+  title={molBLOCKS: decomposing small molecule sets and uncovering enriched fragments},
+  author={Ghersi, Dario and Singh, Mona},
+  journal={Bioinformatics},
+  volume={30},
+  number={14},
+  pages={2081--2083},
+  year={2014},
+  publisher={Oxford University Press}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{pritykin2015genome,
+  title={Genome-wide detection and analysis of multifunctional genes},
+  author={Pritykin, Yuri and Ghersi, Dario and Singh, Mona},
+  journal={PLoS computational biology},
+  volume={11},
+  number={10},
+  pages={e1004467},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{balasubramanya2015novel,
+  title={A novel approach to identify shared fragments in drugs and natural products},
+  author={Balasubramanya, Akshay and Thapa, Ishwor and Bastola, Dhundy and Ghersi, Dario},
+  booktitle={2015 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={575--580},
+  year={2015},
+  organization={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{mcgrath2016building,
+  title={Building towards precision medicine: empowering medical professionals for the next revolution},
+  author={McGrath, Scott and Ghersi, Dario},
+  journal={BMC medical genomics},
+  volume={9},
+  number={1},
+  pages={1--6},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@article{sharma2016identifying,
+  title={Identifying enriched drug fragments as possible candidates for metabolic engineering},
+  author={Sharma, Sunandini and Karri, Kritika and Thapa, Ishwor and Bastola, Dhundy and Ghersi, Dario},
+  journal={BMC medical genomics},
+  volume={9},
+  number={2},
+  pages={167--177},
+  year={2016},
+  publisher={BioMed Central}
+}
+
+@inproceedings{ghersi2016recovering,
+  title={Recovering Bound Forms of Protein Structures Using the Elastic Network Model and Molecular Interaction Fields},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  booktitle={Proceedings of the 7th ACM International Conference on Bioinformatics, Computational Biology, and Health Informatics},
+  pages={50--57},
+  year={2016}
+}
+
+@article{song2017broad,
+  title={Broad TCR repertoire and diverse structural solutions for recognition of an immunodominant CD8+ T cell epitope},
+  author={Song, InYoung and Gil, Anna and Mishra, Rabinarayan and Ghersi, Dario and Selin, Liisa K and Stern, Lawrence J},
+  journal={Nature structural \& molecular biology},
+  volume={24},
+  number={4},
+  pages={395--406},
+  year={2017},
+  publisher={Nature Publishing Group US New York}
+}
+
+@inproceedings{cooper2016forecasting,
+  title={Forecasting the spread of mosquito-borne disease using publicly accessible data: a case study in Chikungunya},
+  author={Cooper, Kathryn M and Bastola, Dhundy R and Gandhi, Robin and Ghersi, Dario and Hinrichs, Steven and Morien, Marsha and Fruhling, Ann},
+  booktitle={AMIA Annual Symposium Proceedings},
+  volume={2016},
+  pages={431},
+  year={2016},
+  organization={American Medical Informatics Association}
+}
+
+@article{cornbergarticle,
+  title={Article amendments},
+  author={Cornberg, Markus and Chen, Alex T and Wilkinson, Lee A and Brehm, Michael A and Kim, Sung-Kwon and Calcagno, Claudia and Ghersi, Dario and Puzone, Roberto and Celada, Franco and Welsh, Raymond M and others}
+}
+
+@article{kamga2017contribution,
+  title={Contribution of the T cell receptor to the generation and maintenance of EBV epitopespecific CD8 T cell responses following primary infection},
+  author={Kamga, Larisa and Brody, Robin and Gautam, Anita and Ghersi, Dario and Selin, Liisa K and Luzuriaga, Katherine},
+  journal={The Journal of Immunology},
+  volume={198},
+  number={1\_Supplement},
+  pages={125--28},
+  year={2017},
+  publisher={American Association of Immunologists}
+}
+
+@article{watkin2017unique,
+  title={Unique influenza A cross-reactive memory CD8 T-cell receptor repertoire has a potential to protect against EBV seroconversion},
+  author={Watkin, Levi B and Mishra, Rabinarayan and Gil, Anna and Aslan, Nuray and Ghersi, Dario and Luzuriaga, Katherine and Selin, Liisa K},
+  journal={Journal of Allergy and Clinical Immunology},
+  volume={140},
+  number={4},
+  pages={1206--1210},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{pritykin2015supporting,
+  title={Supporting Text S1 for Genome-wide Detection and Analysis of Multifunctional Genes},
+  author={Pritykin, Yuri and Ghersi, Dario and Singh, Mona},
+  year={2015}
+}
+
+@article{ghersi2017comparison,
+  title={Comparison of a quantum random number generator with pseudorandom number generators for their use in molecular Monte Carlo simulations},
+  author={Ghersi, Dario and Parakh, Abhishek and Mezei, Mihaly},
+  journal={Journal of computational chemistry},
+  volume={38},
+  number={31},
+  pages={2713--2720},
+  year={2017}
+}
+
+@incollection{venkata2018biological,
+  title={Biological pathway data formats and standards},
+  author={Venkata, Ramakanth C and Ghersi, Dario},
+  booktitle={Encyclopedia of Bioinformatics and Computational Biology: ABC of Bioinformatics},
+  pages={1063--1066},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{thompson2017analysis,
+  title={Analysis of Clinical Significance of MUC4 Isoforms in Pancreatic Cancer Patients Using TCGA RNA-Seq Dataset},
+  author={Thompson, CM and Kumar, S and Ghersi, D and Chirravuri, R and Thapa, I and Smith, L and Batra, SK},
+  booktitle={PANCREAS},
+  volume={46},
+  number={10},
+  pages={1440--1440},
+  year={2017},
+  organization={LIPPINCOTT WILLIAMS \& WILKINS TWO COMMERCE SQ, 2001 MARKET ST, PHILADELPHIA~…}
+}
+
+@inproceedings{atri2017system,
+  title={A System Biology Approach via Connectivity Mapping (CMAP) to Identify New Therapeutic Targets Against Lethal Pancreatic Cancer},
+  author={Atri, P and Ghersi, D and Kaur, S and Ponnusamy, M and Batra, SK},
+  booktitle={PANCREAS},
+  volume={46},
+  number={10},
+  pages={1388--1389},
+  year={2017},
+  organization={LIPPINCOTT WILLIAMS \& WILKINS TWO COMMERCE SQ, 2001 MARKET ST, PHILADELPHIA~…}
+}
+
+@inproceedings{karmakar2017pd2,
+  title={PD2 Functions as the Master Regulator of Stem Cell Network Genes in Pancreatic Cancer},
+  author={Karmakar, S and Barkeer, S and Ghersi, D and Naseer, MW and Ponnusamy, M and Batra, SK},
+  booktitle={PANCREAS},
+  volume={46},
+  number={10},
+  pages={1409--1410},
+  year={2017},
+  organization={LIPPINCOTT WILLIAMS \& WILKINS TWO COMMERCE SQ, 2001 MARKET ST, PHILADELPHIA~…}
+}
+
+@article{aslan2017severity,
+  title={Severity of acute infectious mononucleosis correlates with cross-reactive influenza CD8 T-cell receptor repertoires},
+  author={Aslan, Nuray and Watkin, Levi B and Gil, Anna and Mishra, Rabinarayan and Clark, Fransenio G and Welsh, Raymond M and Ghersi, Dario and Luzuriaga, Katherine and Selin, Liisa K},
+  journal={MBio},
+  volume={8},
+  number={6},
+  pages={e01841--17},
+  year={2017},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+@article{sharma2018cluster,
+  title={Cluster analysis of biological networks},
+  author={Sharma, Asuda and Ali, Hesham and Ghersi, Dario},
+  journal={Encyclopedia of Bioinformatics and Computational Biology: ABC of Bioinformatics},
+  pages={1036--1046},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{ehrlich2017analyzing,
+  title={Analyzing T cell receptor alpha/beta usage in binding to the pMHC},
+  author={Ehrlich, Ryan and Ghersi, Dario},
+  booktitle={2017 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={83--87},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{castiglione2017silico,
+  title={In-silico analysis of the “memory anti-Na{\"\i}ve” effect in anti-viral cross-reactive responses},
+  author={Castiglione, Filippo and Ghersi, Dario and Celada, Franco},
+  booktitle={2017 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={1433--1437},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{munro2018two,
+  title={Two critical positions in zinc finger domains are heavily mutated in three human cancer types},
+  author={Munro, Daniel and Ghersi, Dario and Singh, Mona},
+  journal={PLoS computational biology},
+  volume={14},
+  number={6},
+  pages={e1006290},
+  year={2018},
+  publisher={Public Library of Science}
+}
+
+@article{nasser2018elucidating,
+  title={Elucidating the role of MUC5AC-MET axis in breast cancer brain metastasis},
+  author={Nasser, Mohd W and Gautam, Shailendra K and Kanchan, Ranjana and Atri, Pranita and Siddiqui, Jawed and Bhatia, Rakesh and Carmicheal, Joseph and Ghersi, Dario and Kaur, Sukhwinder and Mahapatra, Siddharth and others},
+  journal={Cancer Research},
+  volume={78},
+  number={13\_Supplement},
+  pages={50--50},
+  year={2018},
+  publisher={The American Association for Cancer Research}
+}
+
+@incollection{venkata2018biological,
+  title={Biological pathway analysis},
+  author={Venkata, Ramakanth Chirravuri and Ghersi, Dario},
+  booktitle={Encyclopedia of Bioinformatics and Computational Biology: ABC of Bioinformatics},
+  pages={1067--1070},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{ghersi2009easymifs,
+  title={EasyMIFs and SiteHound},
+  author={Ghersi, Dario and Sanchez, Roberto},
+  journal={Bioinformatics},
+  volume={25},
+  number={23},
+  pages={3185--3186},
+  year={2009},
+  publisher={Oxford University Press, Inc. New York, NY, USA}
+}
+
+@article{west2019uncovering,
+  title={Uncovering and characterizing splice variants associated with survival in lung cancer patients},
+  author={West, Sean and Kumar, Sushil and Batra, Surinder K and Ali, Hesham and Ghersi, Dario},
+  journal={PLoS computational biology},
+  volume={15},
+  number={10},
+  pages={e1007469},
+  year={2019},
+  publisher={Public Library of Science},
+  pdf={west2019.pdf},
+  selected={true}
+}
+
+@article{westsupplemental,
+  title={Supplemental material: Additional case studies of MGGs Paper: Uncovering and characterizing splice variants associated with survival in lung cancer patients},
+  author={West, Sean and Kumar, Sushil and Batra, Surinder K and Ali, Hesham and Ghersi, Dario}
+}
+
+@article{castiglione2019computer,
+  title={Computer modeling of clonal dominance: memory-anti-naive and its curbing by attrition},
+  author={Castiglione, Filippo and Ghersi, Dario and Celada, Franco},
+  journal={Frontiers in immunology},
+  volume={10},
+  pages={1513},
+  year={2019},
+  publisher={Frontiers Media SA}
+}
+
+@article{hale2019funset,
+  title={FunSet: an open-source software and web server for performing and displaying Gene Ontology enrichment analysis},
+  author={Hale, Matthew L and Thapa, Ishwor and Ghersi, Dario},
+  journal={Bmc Bioinformatics},
+  volume={20},
+  number={1},
+  pages={1--8},
+  year={2019},
+  publisher={BioMed Central}
+}
+
+@misc{aslan2017severity,
+  title={Severity of acute infectious mononucleosis correlates with cross-reactive influenza CD8 T-cell receptor repertoires. mBio 8: e01841-17},
+  author={Aslan, N and Watkin, LB and Gil, A and Mishra, R and Clark, FG and Welsh, RM and Ghersi, D and Luzuriaga, K and Selin, LK},
+  year={2017}
+}
+
+@article{atri2019pre,
+  title={Pre-clinical development of ISOX; A novel therapy for pancreatic cancer identified utilizing system biology approach (s)},
+  author={Atri, Pranita and Seshacharyulu, Parthasarathy and Rachagani, Satyanaryana and Nallasamy, Palanisamy and Rauth, Sanchita and Kaushik, Garima and Ganguly, Koelina and Ghersi, Dario and Ponnusamy, Moorthy P and Kaur, Sukhwinder and others},
+  journal={Cancer Research},
+  volume={79},
+  number={13\_Supplement},
+  pages={4804--4804},
+  year={2019},
+  publisher={The American Association for Cancer Research}
+}
+
+@article{karmakar2019novel,
+  title={A novel mechanism for pancreatic cancer stem cell maintenance: PAF1C-independent role of PAF1},
+  author={Karmakar, Saswati and Rauth, Sanchita and Nimmakayala, Rama Krishna and Barkeer, Srikanth and Nasser, Mohd W and Rachagani, Satyanarayana and Ghersi, Dario and Ponnusamy, Moorthy P and Batra, Surinder K},
+  journal={Cancer Research},
+  volume={79},
+  number={13\_Supplement},
+  pages={3679--3679},
+  year={2019},
+  publisher={The American Association for Cancer Research}
+}
+
+@article{gil2019influenza,
+  title={Influenza A virus (IAV) infection in humans leads to expansion of highly diverse CD8 T cell repertoires cross-reactive with Epstein Barr virus (EBV)},
+  author={Gil, Anna and Mishra, Rabi and Song, InYoung and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K},
+  journal={The Journal of Immunology},
+  volume={202},
+  number={1\_Supplement},
+  pages={74--7},
+  year={2019},
+  publisher={American Association of Immunologists}
+}
+
+@article{kamga2019cdr3alpha,
+  title={CDR3$\alpha$ drives selection of the immunodominant Epstein Barr virus (EBV) BRLF1-specific CD8 T cell receptor repertoire in primary infection},
+  author={Kamga, Larisa and Gil, Anna and Song, Inyoung and Brody, Robin and Ghersi, Dario and Aslan, Nuray and Stern, Lawrence J and Selin, Liisa K and Luzuriaga, Katherine},
+  journal={PLoS pathogens},
+  volume={15},
+  number={11},
+  pages={e1008122},
+  year={2019},
+  publisher={Public Library of Science}
+}
+
+@article{carmicheal2020presence,
+  title={Presence and structure-activity relationship of intrinsically disordered regions across mucins},
+  author={Carmicheal, Joseph and Atri, Pranita and Sharma, Sunandini and Kumar, Sushil and Venkata, Ramakanth Chirravuri and Kulkarni, Prakash and Salgia, Ravi and Ghersi, Dario and Kaur, Sukhwinder and Batra, Surinder K},
+  journal={FASEB journal: official publication of the Federation of American Societies for Experimental Biology},
+  volume={34},
+  number={2},
+  pages={1939},
+  year={2020},
+  publisher={NIH Public Access}
+}
+
+@inproceedings{gautam2020mucin,
+  title={MUCIN-4 (MUC4) is a novel tumor antigen in pancreatic cancer immunotherapy},
+  author={Gautam, Shailendra K and Kumar, Sushil and Dam, Vi and Ghersi, Dario and Jain, Maneesh and Batra, Surinder K},
+  booktitle={Seminars in immunology},
+  volume={47},
+  pages={101391},
+  year={2020},
+  organization={Academic Press}
+}
+
+@inproceedings{li2019identifying,
+  title={Identifying structural changes in correlation networks models of cancer gene expression by stage},
+  author={Li, Qianran and Ghersi, Dario and Thapa, Ishwor and Zhang, Ling and Ali, Hesham and Cooper, Kate},
+  booktitle={2019 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={2075--2082},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{gil2020epstein,
+  title={Epstein-barr virus epitope--major histocompatibility complex interaction combined with convergent recombination drives selection of diverse t cell receptor $\alpha$ and $\beta$ repertoires},
+  author={Gil, Anna and Kamga, Larisa and Chirravuri-Venkata, Ramakanth and Aslan, Nuray and Clark, Fransenio and Ghersi, Dario and Luzuriaga, Katherine and Selin, Liisa K},
+  journal={MBio},
+  volume={11},
+  number={2},
+  pages={e00250--20},
+  year={2020},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+@article{chaudhary2020differential,
+  title={Differential mutation spectrum and immune landscape in African Americans versus Whites: A possible determinant to health disparity in head and neck cancer},
+  author={Chaudhary, Sanjib and Dam, Vi and Ganguly, Koelina and Sharma, Sunandini and Atri, Pranita and Chirravuri-Venkata, Ramakanth and Cox, Jesse L and Sayed, Zafar and Jones, Dwight T and Ganti, Apar K and others},
+  journal={Cancer letters},
+  volume={492},
+  pages={44--53},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{cannon2020cxcr3,
+  title={CXCR3 and cognate ligands are associated with immune cell alteration and aggressiveness of pancreatic ductal adenocarcinoma},
+  author={Cannon, Andrew and Thompson, Christopher M and Maurer, H Carlo and Atri, Pranita and Bhatia, Rakesh and West, Sean and Ghersi, Dario and Olive, Kenneth P and Kumar, Sushil and Batra, Surinder K},
+  journal={Clinical Cancer Research},
+  volume={26},
+  number={22},
+  pages={6051--6063},
+  year={2020},
+  publisher={American Association for Cancer Research}
+}
+
+@article{west2020neep,
+  title={NEEP: null empirically estimated p-values for high-throughput molecular survival analysis},
+  author={West, Sean and Ali, Hesham and Ghersi, Dario},
+  journal={Journal of Open Source Software},
+  volume={5},
+  number={52},
+  pages={2044},
+  year={2020}
+}
+
+@article{klein2020pd,
+  title={PD-L1 checkpoint inhibition narrows the antigen-specific T cell receptor repertoire in chronic lymphocytic choriomeningitis virus infection},
+  author={Klein, S and Ghersi, D and Manns, MP and Prinz, I and Cornberg, M and Kraft, ARM},
+  journal={Journal of virology},
+  volume={94},
+  number={18},
+  pages={e00795--20},
+  year={2020},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+@article{ganguly2020cancer,
+  title={Cancer-associated fibroblasts: versatile players in the tumor microenvironment},
+  author={Ganguly, Debolina and Chandra, Raghav and Karalis, John and Teke, Martha and Aguilera, Todd and Maddipati, Ravikanth and Wachsmann, Megan B and Ghersi, Dario and Siravegna, Giulia and Zeh III, Herbert J and others},
+  journal={Cancers},
+  volume={12},
+  number={9},
+  pages={2652},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{ehrlich2021swarmtcr,
+  title={SwarmTCR: a computational approach to predict the specificity of T cell receptors},
+  author={Ehrlich, Ryan and Kamga, Larisa and Gil, Anna and Luzuriaga, Katherine and Selin, Liisa K and Ghersi, Dario},
+  journal={BMC bioinformatics},
+  volume={22},
+  number={1},
+  pages={1--14},
+  year={2021},
+  publisher={BioMed Central},
+  pdf={ehrlich2021.pdf},
+  selected={true}
+}
+
+@inproceedings{gasper2020mesh,
+  title={MeSH Indexing Using the Biomedical Citation Network},
+  author={Gasper, William and Chundi, Parvathi and Ghersi, Dario},
+  booktitle={Proceedings of the 11th ACM International Conference on Bioinformatics, Computational Biology and Health Informatics},
+  pages={1--8},
+  year={2020}
+}
+
+@article{li2020measurement,
+  title={Measurement of structural change in co-expression networks from cancer gene expression data},
+  author={Li, Qianran and Ghersi, Dario and Thapa, Ishwor and Zhang, Ling and Ali, Hesham and Cooper, Kate},
+  journal={International Journal of Data Mining and Bioinformatics},
+  volume={24},
+  number={4},
+  pages={291--305},
+  year={2020},
+  publisher={Inderscience Publishers (IEL)}
+}
+
+@article{thompson2021mucin,
+  title={Mucin Expression and Splicing Determine Novel Subtypes and Patient Mortality in Pancreatic Ductal AdenocarcinomaPDAC Survival and Subtyping by Mucin Profiling},
+  author={Thompson, Christopher M and Cannon, Andrew and West, Sean and Ghersi, Dario and Atri, Pranita and Bhatia, Rakesh and Smith, Lynette and Rachagani, Satyayanarayana and Wichman, Christopher and Kumar, Sushil and others},
+  journal={Clinical Cancer Research},
+  volume={27},
+  number={24},
+  pages={6787--6799},
+  year={2021},
+  publisher={American Association for Cancer Research}
+}
+
+@inproceedings{ganguly2021mucin,
+  title={Mucin 5 AC Tunes Adipose-Mesenchymal Stem Cells to Regulate Stromal Heterogeneity in Pancreatic Cancer},
+  author={Ganguly, K and Cox, J and Ghersi, D and Kumar, S and Batra, SK},
+  booktitle={PANCREAS},
+  volume={50},
+  number={7},
+  pages={1059--1059},
+  year={2021},
+  organization={LIPPINCOTT WILLIAMS \& WILKINS TWO COMMERCE SQ, 2001 MARKET ST, PHILADELPHIA~…}
+}
+
+@inproceedings{atri2021pre,
+  title={Pre-clinical Assessment of ISOX, A Potential New Therapeutic For Pancreatic Cancer},
+  author={Atri, P and Natarajan, G and Seshacharyulu, P and Rachagani, S and Nallasamy, P and Rauth, S and Leon, F and Ganguly, K and Shah, A and Ghersi, D and others},
+  booktitle={PANCREAS},
+  volume={50},
+  number={7},
+  pages={1046--1046},
+  year={2021},
+  organization={LIPPINCOTT WILLIAMS \& WILKINS TWO COMMERCE SQ, 2001 MARKET ST, PHILADELPHIA~…}
+}
+
+@article{ghersi2021identifying,
+  title={Identifying Molecular Fragments That Drive 7-Dehydrocholesterol Elevation},
+  author={Ghersi, Dario and Genaro-Mattos, Thiago C},
+  journal={ACS Pharmacology \& Translational Science},
+  volume={5},
+  number={1},
+  pages={3--7},
+  year={2021},
+  publisher={American Chemical Society}
+}
+
+@inproceedings{gasper2021automatic,
+  title={Automatic Extension of Medical Subject Headings (MeSH) Thesaurus to Emerging Research},
+  author={Gasper, William and Ma, Jiahao and Ghersi, Dario and Gnimpieba, Etienne Z and Gadhamshetty, Venkataramana and Chundi, Parvathi},
+  booktitle={2021 IEEE International Conference on Bioinformatics and Biomedicine (BIBM)},
+  pages={3570--3577},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{ganguly2022mucin,
+  title={Mucin 5AC--Mediated CD44/ITGB1 Clustering Mobilizes Adipose-Derived Mesenchymal Stem Cells to Modulate Pancreatic Cancer Stromal Heterogeneity},
+  author={Ganguly, Koelina and Cox, Jesse L and Ghersi, Dario and Grandgenett, Paul M and Hollingsworth, Michael A and Jain, Maneesh and Kumar, Sushil and Batra, Surinder K},
+  journal={Gastroenterology},
+  volume={162},
+  number={7},
+  pages={2032--2046},
+  year={2022},
+  publisher={WB Saunders}
+}
+
+@article{clarke2022electronic,
+  title={Electronic health record (EHR) simulation into biomedical informatics course improves students’ understanding of the impact of EHR documentation burden and usability on clinical workflow},
+  author={Clarke, Martina A and Ghersi, Dario},
+  journal={Health and Technology},
+  volume={12},
+  number={2},
+  pages={465--472},
+  year={2022},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@article{gasper2022variant,
+  title={Variant calling enhances the identification of cancer cells in single-cell RNA sequencing data},
+  author={Gasper, William and Rossi, Francesca and Ligorio, Matteo and Ghersi, Dario},
+  journal={PLoS computational biology},
+  volume={18},
+  number={10},
+  pages={e1010576},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA},
+  pdf={gasper2022.pdf},
+  selected={true}
+}
+
+@inproceedings{chetti2021new,
+  title={A new approach for analyzing safety and performance factors in civil infrastructures using correlation networks and population analysis},
+  author={Chetti, Prasad and Ali, Hesham H and Ghersi, Dario and Ghandi, Robin A and Ricks, Brian and Najjar, Lotfollah},
+  booktitle={13th International Workshop on Structural Health Monitoring: Enabling Next-Generation SHM for Cyber-Physical Systems, IWSHM 2021},
+  pages={593--600},
+  year={2021},
+  organization={DEStech Publications Inc.}
+}
+
+@article{mischke2022cross,
+  title={Cross-Reactive T Cell Response Exists in Chronic Lymphocytic Choriomeningitis Virus Infection upon Pichinde Virus Challenge},
+  author={Mischke, Jasmin and Klein, Sebastian and Seamann, Austin and Prinz, Immo and Selin, Liisa and Ghersi, Dario and Cornberg, Markus and Kraft, Anke RM},
+  journal={Viruses},
+  volume={14},
+  number={10},
+  pages={2293},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{sharma2022integrative,
+  title={Integrative Analysis of Genetic and Tumor Microenvironment Topology to Delineate Prognostic Subtypes in Mantle Cell Lymphoma},
+  author={Sharma, Sunandini and Bouska, Alyssa C and Gamboa, Alicia and Ali, Roshia and Issa, Issa Ismail and Lone, Waseem G and Jochum, Dylan T and Zhang, Weiwei and Elhag, Salma and Ghersi, Dario and others},
+  journal={Blood},
+  volume={140},
+  number={Supplement 1},
+  pages={3601--3602},
+  year={2022},
+  publisher={American Society of Hematology}
+}
+
+@article{clark2022cross,
+  title={Cross-reactivity influences changes in human influenza A virus and Epstein Barr virus specific CD8 memory T cell receptor alpha and beta repertoires between young and old},
+  author={Clark, Fransenio and Gil, Anna and Thapa, Ishwor and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K},
+  journal={Frontiers in Immunology},
+  volume={13},
+  year={2022},
+  publisher={Frontiers Media SA}
+}
+
+@article{chirravuri2023muc16,
+  title={MUC16 and TP53 family co-regulate tumor-stromal heterogeneity in pancreatic adenocarcinoma},
+  author={Chirravuri-Venkata, Ramakanth and Dam, Vi and Nimmakayala, Rama Krishna and Alsafwani, Zahraa Wajih and Bhyravbhatla, Namita and Lakshmanan, Imayavaramban and Ponnusamy, Moorthy P and Kumar, Sushil and Jain, Maneesh and Ghersi, Dario and others},
+  journal={Frontiers in Oncology},
+  volume={13},
+  year={2023},
+  publisher={Frontiers Media SA}
 }
