--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -424,6 +424,7 @@
   volume={10},
   pages={1513},
   year={2019},
+  pdf={castiglione2019.pdf},
   publisher={Frontiers Media SA}
 }
 
@@ -749,4 +750,13 @@
   volume={13},
   year={2023},
   publisher={Frontiers Media SA}
+}
+
+@article{renzi2023engineering,
+  title={Engineering an ACE2-Derived Fragment as a Decoy for Novel SARS-CoV-2 Virus},
+  author={Renzi, Fabiana and Seamann, Austin and Ganguly, Koelina and Pandey, Kabita and Byrareddy, Siddappa N and Batra, Surinder and Kumar, Sushil and Ghersi, Dario},
+  journal={ACS Pharmacology \& Translational Science},
+  year={2023},
+  pdf={renzi2023.pdf},
+  publisher={American Chemical Society}
 }
