--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -761,3 +761,26 @@
   pdf={renzi2023.pdf},
   publisher={American Chemical Society}
 }
+
+@article{10.3389/fimmu.2022.1011935,
+author={Clark, Fransenio and Gil, Anna and Thapa, Ishwor and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K.},
+title={Cross-reactivity influences changes in human influenza A virus and Epstein Barr virus specific CD8 memory T cell receptor alpha and beta repertoires between young and old},       
+journal={Frontiers in Immunology},  
+volume={13},    
+year={2023},       
+doi={10.3389/fimmu.2022.1011935},    
+issn={1664-3224},   
+}
+
+@article{10.1158/1078-0432.CCR-23-0825,
+    author = {Kisling, Sophia G. and Atri, Pranita and Shah, Ashu and Cox, Jesse L. and Sharma, Sunandini and Smith, Lynette M. and Ghersi, Dario and Batra, Surinder K.},
+    title = "{A Novel HOXA10-Associated 5 Gene-Based Prognostic Signature for Stratification of Short-Term Survivors of Pancreatic Ductal Adenocarcinoma}",
+    journal = {Clinical Cancer Research},
+    pages = {CCR-23-0825},
+    year = {2023},
+    month = {07},
+    issn = {1078-0432},
+    doi = {10.1158/1078-0432.CCR-23-0825},
+    url = {https://doi.org/10.1158/1078-0432.CCR-23-0825},
+    eprint = {https://aacrjournals.org/clincancerres/article-pdf/doi/10.1158/1078-0432.CCR-23-0825/3346873/ccr-23-0825.pdf},
+}
