Updatated students and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -784,3 +784,15 @@ issn={1664-3224},
     url = {https://doi.org/10.1158/1078-0432.CCR-23-0825},
     eprint = {https://aacrjournals.org/clincancerres/article-pdf/doi/10.1158/1078-0432.CCR-23-0825/3346873/ccr-23-0825.pdf},
 }
+
+@ARTICLE{10.3389/fpubh.2023.1276029,
+AUTHOR={Thapa, Ishwor and Ghersi, Dario},
+TITLE={Modeling preferential attraction to infected hosts in vector-borne diseases},
+JOURNAL={Frontiers in Public Health},
+VOLUME={11},
+YEAR={2023},
+URL={https://www.frontiersin.org/articles/10.3389/fpubh.2023.1276029},
+DOI={10.3389/fpubh.2023.1276029},
+ISSN={2296-2565},
+pdf={thapa2023.pdf},
+}
