--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -134,9 +134,9 @@
   journal={BMC Systems Biology},
   volume={7},
   number={1},
-  pages={1--12},
+  pages={5},
   year={2013},
-  publisher={BioMed Central}
+  publisher={BioMed Central London}
 }
 
 @article{ghersi2014interaction,
@@ -147,9 +147,14 @@
   number={3},
   pages={e18--e18},
   year={2014},
-  publisher={Oxford University Press},
-  pdf={ghersi2014.pdf},
-  selected={true}
+  publisher={Oxford University Press}
+}
+
+@phdthesis{ghersi2010computational,
+  title={Computational approaches for the identification and characterization of protein binding sites},
+  author={Ghersi, Dario},
+  year={2010},
+  school={Mount Sinai School of Medicine of New York University}
 }
 
 @article{ghersi2014molblocks,
@@ -161,6 +166,17 @@
   pages={2081--2083},
   year={2014},
   publisher={Oxford University Press}
+}
+
+@article{ghersi2014molblocks,
+  title={molBLOCKS--User’s Guide},
+  author={Ghersi, Dario},
+  year={2014}
+}
+
+@article{ghersieasymifs,
+  title={EASYMIFs \& SITEHOUND Programs for ligand-binding site identification and characterization in protein structures User’s Guide},
+  author={Ghersi, Dario}
 }
 
 @article{pritykin2015genome,
@@ -188,7 +204,6 @@
   author={McGrath, Scott and Ghersi, Dario},
   journal={BMC medical genomics},
   volume={9},
-  number={1},
   pages={1--6},
   year={2016},
   publisher={BioMed Central}
@@ -199,7 +214,6 @@
   author={Sharma, Sunandini and Karri, Kritika and Thapa, Ishwor and Bastola, Dhundy and Ghersi, Dario},
   journal={BMC medical genomics},
   volume={9},
-  number={2},
   pages={167--177},
   year={2016},
   publisher={BioMed Central}
@@ -325,7 +339,7 @@
   journal={MBio},
   volume={8},
   number={6},
-  pages={e01841--17},
+  pages={10--1128},
   year={2017},
   publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
@@ -379,6 +393,15 @@
   publisher={The American Association for Cancer Research}
 }
 
+@article{kamga2018high,
+  title={High diversity, turnover, and structural constraints characterize TCR $\alpha$ and $\beta$ repertoire selection},
+  author={Kamga, Larisa and Gil, Anna and Song, Inyoung and Chirravuri, Ramakanth and Aslan, Nuray and Ghersi, Dario and Stern, Lawrence J and Selin, Liisa K and Luzuriaga, Katherine},
+  journal={bioRxiv},
+  pages={428623},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @incollection{venkata2018biological,
   title={Biological pathway analysis},
   author={Venkata, Ramakanth Chirravuri and Ghersi, Dario},
@@ -407,9 +430,7 @@
   number={10},
   pages={e1007469},
   year={2019},
-  publisher={Public Library of Science},
-  pdf={west2019.pdf},
-  selected={true}
+  publisher={Public Library of Science}
 }
 
 @article{westsupplemental,
@@ -424,19 +445,16 @@
   volume={10},
   pages={1513},
   year={2019},
-  pdf={castiglione2019.pdf},
   publisher={Frontiers Media SA}
 }
 
 @article{hale2019funset,
   title={FunSet: an open-source software and web server for performing and displaying Gene Ontology enrichment analysis},
   author={Hale, Matthew L and Thapa, Ishwor and Ghersi, Dario},
-  journal={Bmc Bioinformatics},
+  journal={BMC bioinformatics},
   volume={20},
-  number={1},
   pages={1--8},
   year={2019},
-  pdf={hale2019.pdf},
   publisher={BioMed Central}
 }
 
@@ -521,14 +539,41 @@
 }
 
 @article{gil2020epstein,
+  title={Epstein Barr virus epitope/MHC interaction combined with convergent recombination drive selection of diverse T cell receptor $\alpha$ and $\beta$ repertoires},
+  author={Gil, Anna and Kamga, Larisa and Chirravuri-Venkata, Ramakanth and Aslan, Nuray and Clark, Fransenio and Ghersi, Dario and Luzuriaga, Katherine and Selin, Liisa K},
+  journal={bioRxiv},
+  pages={2020--02},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{gil2020epstein,
   title={Epstein-barr virus epitope--major histocompatibility complex interaction combined with convergent recombination drives selection of diverse t cell receptor $\alpha$ and $\beta$ repertoires},
   author={Gil, Anna and Kamga, Larisa and Chirravuri-Venkata, Ramakanth and Aslan, Nuray and Clark, Fransenio and Ghersi, Dario and Luzuriaga, Katherine and Selin, Liisa K},
   journal={MBio},
   volume={11},
   number={2},
-  pages={e00250--20},
+  pages={10--1128},
   year={2020},
   publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+}
+
+@article{renzi2020ace2,
+  title={ACE2 fragment as a decoy for novel SARS-Cov-2 virus},
+  author={Renzi, Fabiana and Ghersi, Dario},
+  journal={bioRxiv},
+  pages={2020--04},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{chirravuri20201q21,
+  title={1q21. 3 amplification modulates therapy sensitivity in Triple Negative Breast Cancer},
+  author={Chirravuri-Venkata, Ramakanth and Ghersi, Dario and Ganti, Apar K and Lakshmanan, Imayavaramban and Chaudary, Sanjib and Batra, Surinder K and Nasser, Mohd Wasim},
+  journal={bioRxiv},
+  pages={2020--04},
+  year={2020},
+  publisher={Cold Spring Harbor Laboratory}
 }
 
 @article{chaudhary2020differential,
@@ -568,7 +613,7 @@
   journal={Journal of virology},
   volume={94},
   number={18},
-  pages={e00795--20},
+  pages={10--1128},
   year={2020},
   publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
@@ -589,16 +634,13 @@
   author={Ehrlich, Ryan and Kamga, Larisa and Gil, Anna and Luzuriaga, Katherine and Selin, Liisa K and Ghersi, Dario},
   journal={BMC bioinformatics},
   volume={22},
-  number={1},
   pages={1--14},
   year={2021},
-  publisher={BioMed Central},
-  pdf={ehrlich2021.pdf},
-  selected={true}
+  publisher={BioMed Central}
 }
 
 @inproceedings{gasper2020mesh,
-  title={MeSH Indexing Using the Biomedical Citation Network},
+  title={MeSH indexing using the biomedical citation network},
   author={Gasper, William and Chundi, Parvathi and Ghersi, Dario},
   booktitle={Proceedings of the 11th ACM International Conference on Bioinformatics, Computational Biology and Health Informatics},
   pages={1--8},
@@ -617,7 +659,7 @@
 }
 
 @article{thompson2021mucin,
-  title={Mucin Expression and Splicing Determine Novel Subtypes and Patient Mortality in Pancreatic Ductal AdenocarcinomaPDAC Survival and Subtyping by Mucin Profiling},
+  title={Mucin expression and splicing determine novel subtypes and patient mortality in pancreatic ductal adenocarcinoma},
   author={Thompson, Christopher M and Cannon, Andrew and West, Sean and Ghersi, Dario and Atri, Pranita and Bhatia, Rakesh and Smith, Lynette and Rachagani, Satyayanarayana and Wichman, Christopher and Kumar, Sushil and others},
   journal={Clinical Cancer Research},
   volume={27},
@@ -650,7 +692,7 @@
 }
 
 @article{ghersi2021identifying,
-  title={Identifying Molecular Fragments That Drive 7-Dehydrocholesterol Elevation},
+  title={Identifying molecular fragments that drive 7-dehydrocholesterol elevation},
   author={Ghersi, Dario and Genaro-Mattos, Thiago C},
   journal={ACS Pharmacology \& Translational Science},
   volume={5},
@@ -680,6 +722,15 @@
   publisher={WB Saunders}
 }
 
+@article{gasper2022novel,
+  title={A novel computational approach to identify cancer cells in scRNA-seq data},
+  author={Gasper, William and Rossi, Francesca and Ligorio, Matteo and Ghersi, Dario},
+  journal={bioRxiv},
+  pages={2022--04},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{clarke2022electronic,
   title={Electronic health record (EHR) simulation into biomedical informatics course improves students’ understanding of the impact of EHR documentation burden and usability on clinical workflow},
   author={Clarke, Martina A and Ghersi, Dario},
@@ -699,18 +750,14 @@
   number={10},
   pages={e1010576},
   year={2022},
-  publisher={Public Library of Science San Francisco, CA USA},
-  pdf={gasper2022.pdf},
-  selected={true}
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@inproceedings{chetti2021new,
+@article{chetti2021new,
   title={A new approach for analyzing safety and performance factors in civil infrastructures using correlation networks and population analysis},
-  author={Chetti, Prasad and Ali, Hesham H and Ghersi, Dario and Ghandi, Robin A and Ricks, Brian and Najjar, Lotfollah},
-  booktitle={13th International Workshop on Structural Health Monitoring: Enabling Next-Generation SHM for Cyber-Physical Systems, IWSHM 2021},
-  pages={593--600},
-  year={2021},
-  organization={DEStech Publications Inc.}
+  author={Chetti, Prasad and Ali, Hesham and Gandhi, R and Ricks, B and Ghersi, D and Najjar, Lotfollah},
+  journal={Will be Coming in the Proceedings of the 13th IWSHM},
+  year={2021}
 }
 
 @article{mischke2022cross,
@@ -735,12 +782,28 @@
   publisher={American Society of Hematology}
 }
 
-@article{clark2022cross,
+@article{thiele2022machine,
+  title={A Machine Learning Approach for Predicting Patient Mortality with Heart Rate Variability Statistics},
+  author={Thiele, Matthew and Ghersi, Dario},
+  year={2022}
+}
+
+@article{clark2022co,
+  title={Co-evolution of human influenza A and Epstein Barr virus-specific CD8 ex vivo memory T cell receptor BV repertoires with increasing age},
+  author={Clark, Fransenio and Gil, Anna and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K},
+  journal={bioRxiv},
+  pages={2022--12},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{clark2023cross,
   title={Cross-reactivity influences changes in human influenza A virus and Epstein Barr virus specific CD8 memory T cell receptor alpha and beta repertoires between young and old},
   author={Clark, Fransenio and Gil, Anna and Thapa, Ishwor and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K},
   journal={Frontiers in Immunology},
   volume={13},
-  year={2022},
+  pages={1011935},
+  year={2023},
   publisher={Frontiers Media SA}
 }
 
@@ -749,6 +812,7 @@
   author={Chirravuri-Venkata, Ramakanth and Dam, Vi and Nimmakayala, Rama Krishna and Alsafwani, Zahraa Wajih and Bhyravbhatla, Namita and Lakshmanan, Imayavaramban and Ponnusamy, Moorthy P and Kumar, Sushil and Jain, Maneesh and Ghersi, Dario and others},
   journal={Frontiers in Oncology},
   volume={13},
+  pages={1073820},
   year={2023},
   publisher={Frontiers Media SA}
 }
@@ -756,43 +820,68 @@
 @article{renzi2023engineering,
   title={Engineering an ACE2-Derived Fragment as a Decoy for Novel SARS-CoV-2 Virus},
   author={Renzi, Fabiana and Seamann, Austin and Ganguly, Koelina and Pandey, Kabita and Byrareddy, Siddappa N and Batra, Surinder and Kumar, Sushil and Ghersi, Dario},
-  journal={ACS Pharmacology \& Translational Science},
+  journal={ACS pharmacology \& translational science},
+  volume={6},
+  number={6},
+  pages={857--867},
   year={2023},
-  pdf={renzi2023.pdf},
   publisher={American Chemical Society}
 }
 
-@article{10.3389/fimmu.2022.1011935,
-author={Clark, Fransenio and Gil, Anna and Thapa, Ishwor and Aslan, Nuray and Ghersi, Dario and Selin, Liisa K.},
-title={Cross-reactivity influences changes in human influenza A virus and Epstein Barr virus specific CD8 memory T cell receptor alpha and beta repertoires between young and old},       
-journal={Frontiers in Immunology},  
-volume={13},    
-year={2023},       
-doi={10.3389/fimmu.2022.1011935},    
-issn={1664-3224},   
+@article{kisling2023novel,
+  title={A Novel HOXA10-Associated 5-Gene--Based Prognostic Signature for Stratification of Short-term Survivors of Pancreatic Ductal Adenocarcinoma},
+  author={Kisling, Sophia G and Atri, Pranita and Shah, Ashu and Cox, Jesse L and Sharma, Sunandini and Smith, Lynette M and Ghersi, Dario and Batra, Surinder K},
+  journal={Clinical Cancer Research},
+  volume={29},
+  number={18},
+  pages={3759--3770},
+  year={2023},
+  publisher={American Association for Cancer Research}
 }
 
-@article{10.1158/1078-0432.CCR-23-0825,
-    author = {Kisling, Sophia G. and Atri, Pranita and Shah, Ashu and Cox, Jesse L. and Sharma, Sunandini and Smith, Lynette M. and Ghersi, Dario and Batra, Surinder K.},
-    title = "{A Novel HOXA10-Associated 5 Gene-Based Prognostic Signature for Stratification of Short-Term Survivors of Pancreatic Ductal Adenocarcinoma}",
-    journal = {Clinical Cancer Research},
-    pages = {CCR-23-0825},
-    year = {2023},
-    month = {07},
-    issn = {1078-0432},
-    doi = {10.1158/1078-0432.CCR-23-0825},
-    url = {https://doi.org/10.1158/1078-0432.CCR-23-0825},
-    eprint = {https://aacrjournals.org/clincancerres/article-pdf/doi/10.1158/1078-0432.CCR-23-0825/3346873/ccr-23-0825.pdf},
+@article{thapa2023modeling,
+  title={Modeling preferential attraction to infected hosts in vector-borne diseases},
+  author={Thapa, Ishwor and Ghersi, Dario},
+  journal={Frontiers in Public Health},
+  volume={11},
+  pages={1276029},
+  year={2023},
+  publisher={Frontiers Media SA}
 }
 
-@ARTICLE{10.3389/fpubh.2023.1276029,
-AUTHOR={Thapa, Ishwor and Ghersi, Dario},
-TITLE={Modeling preferential attraction to infected hosts in vector-borne diseases},
-JOURNAL={Frontiers in Public Health},
-VOLUME={11},
-YEAR={2023},
-URL={https://www.frontiersin.org/articles/10.3389/fpubh.2023.1276029},
-DOI={10.3389/fpubh.2023.1276029},
-ISSN={2296-2565},
-pdf={thapa2023.pdf},
+@article{singh2024towards,
+  title={Towards equitable MHC binding predictions: computational strategies to assess and reduce data bias},
+  author={Singh, Mona and Glynn, Eric and Ghersi, Dario},
+  journal={bioRxiv},
+  pages={2024--01},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{atri2024connectivity,
+  title={Connectivity mapping-based identification of pharmacological inhibitor targeting HDAC6 in aggressive pancreatic ductal adenocarcinoma},
+  author={Atri, Pranita and Shah, Ashu and Natarajan, Gopalakrishnan and Rachagani, Satyanarayana and Rauth, Sanchita and Ganguly, Koelina and Carmicheal, Joseph and Ghersi, Dario and Cox, Jesse L and Smith, Lynette M and others},
+  journal={npj Precision Oncology},
+  volume={8},
+  number={1},
+  pages={66},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@misc{ligorio2024computational,
+  title={Computational system and method for diagnosis, prognosis, and therapeutics of cancer patients using spatial-temporal tissue architectural properties},
+  author={Ligorio, Matteo and Napier, Rebecca and Gasper, William and Ghersi, Dario},
+  year={2024},
+  month=mar # "~21",
+  note={US Patent App. 18/469,022}
+}
+
+@article{ehrlich2024computational,
+  title={Computational Methods for Predicting Key Interactions in T Cell--Mediated Adaptive Immunity},
+  author={Ehrlich, Ryan and Glynn, Eric and Singh, Mona and Ghersi, Dario},
+  journal={Annual Review of Biomedical Data Science},
+  volume={7},
+  year={2024},
+  publisher={Annual Reviews}
 }
